Added DbContext class, updated HomeController and added initial to Home/Index

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TeamContext": "Server=(localdb)\\mssqllocaldb;Database=Teams;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
