Updated index.cshtml and json file

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TeamContext": "Server=(localdb)\\mssqllocaldb;Database=Teams;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TeamContext": "Server=tcp:volleyballfinaldbserver.database.windows.net,1433;Initial Catalog=VolleyballFinal_db;Persist Security Info=False;User ID=volleyballstats;Password=Password1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
